# polyarb-engine

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml  run.py
.github/workflows/: ci.yml
src/topic/: __init__.py  backtest.py  client.py  config.py  deterministic_bootstrap.py  graph.py  ingestion.py  models.py  run.py  signals.py
src/topic/utils/: __init__.py  client.py  embeddings.py  http.py  models.py  vector_index.py
tests/: __init__.py  conftest.py  test_backtest.py  test_client.py  test_embeddings.py  test_graph.py  test_http.py  test_ingestion.py  test_models.py  test_signals.py  test_vector_index.py
