[project]
name = "topic"
version = "0.1.0"
description = "Polymarket trading system for detecting mispricing opportunities"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "numpy>=1.24.0",
  "python-dateutil>=2.8.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.2.0",
  "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "types-requests>=2.31.0",
  "types-python-dateutil>=2.8.0",
  "responses>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
