[project]
name = "topic"
version = "0.1.0"
description = "Pipeline for ingesting Polymarket data, building similarity graphs, and monitoring signals"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "numpy>=1.24.0",
  "python-dateutil>=2.8.0",
  "scikit-learn>=1.3.0",
  "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.5.0",
  "types-requests>=2.31.0",
  "types-python-dateutil>=2.8.0",
  "responses>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
filterwarnings = []

[project.scripts]
topic = "topic.run:main"
